Fix video stretching in the cell

--- a/modding-app/src/Player/Player.module.css
+++ b/modding-app/src/Player/Player.module.css
@@ -7,12 +7,15 @@
 
 .player .videoWrapper {
   place-self: center;
+  width: 100%;
   height: 100%;
 }
 
 .player video {
   max-height: 100%;
   max-width: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 .controls {
